--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         System.import('app/boot')
                 .then(null, console.error.bind(console));
     </script>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 
 </head>
 
