--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <title>Angular 2 QuickStart</title>
 
     <!-- 1. Загрузите библиотеки -->
+    <script src="bower_components/traceur-runtime/traceur-runtime.min.js"></script>
     <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+
     <!--<script src="lib/leaflet/leaflet.js"></script>-->
     <link rel="stylesheet" href="lib/leaflet/leaflet.css" />
+    <link rel="stylesheet" href="dest/css/index.css" />
 
 
     <!-- 2. Настройте SystemJS -->
