--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Angular 2 QuickStart</title>
 
     <!-- 1. Загрузите библиотеки -->
-    <script src="bower_components/traceur-runtime/traceur-runtime.min.js"></script>
+    <!--<script src="bower_components/traceur-runtime/traceur-runtime.min.js"></script>-->
     <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
