--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Angular 2 QuickStart</title>
+    <title>Вело атлас</title>
 
     <!-- 1. Загрузите библиотеки -->
     <!--<script src="bower_components/traceur-runtime/traceur-runtime.min.js"></script>-->
