local storage start

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script>
         System.config({
             "paths": {
-                "angular2-local-storage\/*": "node_modules/angular2-local-storage/*.js"
+                "angular2-local-storage\/*": "node_modules/angular2-local-storage/*"
             },
             packages: {
 
