--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Вело атлас</title>
 
     <!-- 1. Загрузите библиотеки -->
-    <!--<script src="bower_components/traceur-runtime/traceur-runtime.min.js"></script>-->
+    <script src="bower_components/traceur-runtime/traceur-runtime.min.js"></script>
     <script src="lib/a2/angular2-polyfills.min.js"></script>
     <!--<script src="node_modules/systemjs/dist/system.src.js"></script>-->
     <script src="lib/systemjs/system.js"></script>
