--- a/index.html
+++ b/index.html
@@ -1,60 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>Вело атлас</title>
+    <head>
+        <title>Вело атлас</title>
 
-    <!-- 1. Загрузите библиотеки -->
-    <script src="bower_components/traceur-runtime/traceur-runtime.min.js"></script>
-    <script src="lib/a2/angular2-polyfills.min.js"></script>
-    <!--<script src="node_modules/systemjs/dist/system.src.js"></script>-->
-    <script src="lib/systemjs/system.js"></script>
-    <script src="lib/rxjs/Rx.min.js"></script>
-    <!--<script src="node_modules/angular2/bundles/angular2.min.js"></script>-->
-    <script src="lib/a2/angular2.min.js"></script>
+        <!-- 1. Загрузите библиотеки -->
+        <script src="node_modules/core-js/client/shim.min.js"></script>
+        <script src="node_modules/zone.js/dist/zone.js"></script>
+        <script src="node_modules/reflect-metadata/Reflect.js"></script>
+        <script src="node_modules/systemjs/dist/system.src.js"></script>
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-    <!--<script src="lib/leaflet/leaflet.js"></script>-->
-    <link rel="stylesheet" href="lib/leaflet/leaflet.css" />
-    <link rel="stylesheet" href="dest/css/index.css" />
+        <script src="src/app/systemjs.config.js"></script>
+        <script>
+            System.import('app').catch(function(err){ console.error(err); });
+        </script>
 
 
-    <!-- 2. Настройте SystemJS -->
-    <script>
-        System.config({
-            "paths": {
-                "local-storage": "local-storage.js"
-            },
-            packages: {
 
-                app: {
-
-                    format: 'register',
-                    defaultExtension: 'js'
-                },
-                'lib':{
-                    defaultExtension: 'js'
-                }
+        <style>
+            * {
+                margin: 0;
+                padding: 0;
             }
+        </style>
 
-        });
+    </head>
 
-        System.import('app/boot')
-                .then(null, console.error.bind(console));
-    </script>
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-        }
-    </style>
-
-</head>
-
-<!-- 3. Отобразите приложение -->
-<body>
-<my-app>Loading...</my-app>
-</body>
+    <!-- 3. Отобразите приложение -->
+    <body>
+    <my-app>Loading...</my-app>
+    </body>
 
 </html>
