--- a/index.html
+++ b/index.html
@@ -1,33 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
-    <head>
-        <title>Вело атлас</title>
-
-        <!-- 1. Загрузите библиотеки -->
-        <script src="node_modules/core-js/client/shim.min.js"></script>
-        <script src="node_modules/zone.js/dist/zone.js"></script>
-        <script src="node_modules/reflect-metadata/Reflect.js"></script>
-        <script src="node_modules/systemjs/dist/system.src.js"></script>
-
-        <script src="src/app/systemjs.config.js"></script>
-        <script>
-            System.import('app').catch(function(err){ console.error(err); });
-        </script>
-
-
-        <style>
-            * {
-                margin: 0;
-                padding: 0;
-            }
-        </style>
-
-    </head>
-
-    <!-- 3. Отобразите приложение -->
-    <body>
-    <my-app>Loading...</my-app>
-    </body>
-
+  <head>
+    <title>Вело атлас</title>
+    <base href="/">
+    <!-- 1. Загрузите библиотеки-->
+    <script src="node_modules/core-js/client/shim.min.js"></script>
+    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="systemjs.config.js"></script>
+    <script>System.import('app').catch(function(err){ console.error(err); });</script>
+    <style>
+      * {
+          margin: 0;
+          padding: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <ui-view>Loading...</ui-view>
+  </body>
 </html>
