--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <title>Вело атлас</title>
     <base href="/">
-    <!-- 1. Загрузите библиотеки-->
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
@@ -18,6 +17,6 @@
     </style>
   </head>
   <body>
-    <ui-view>Loading...</ui-view>
+    <my-app>Loading...</my-app>
   </body>
 </html>
