--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Вело атлас</title>
+    <link rel="shortcut icon" href="src/img/T.png" type="image/png">
     <base href="/">
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
