Add leaflet start

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Вело атлас</title>
     <link rel="shortcut icon" href="src/img/icon.png" type="image/png">
     <base href="/">
+    <script src="lib/leaflet/leaflet.js"></script>
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.min.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
