--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Вело атлас</title>
     <link rel="shortcut icon" href="src/img/icon.png" type="image/png">
     <base href="/">
+    <link rel="stylesheet" href="lib/leaflet/leaflet.css">
     <script src="lib/leaflet/leaflet.js"></script>
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.min.js"></script>
@@ -15,6 +16,11 @@
       * {
           margin: 0;
           padding: 0;
+      
+      }
+      html, body{
+          width: 100%;
+          height: 100%;
       }
     </style>
   </head>
