--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Вело атлас</title>
+    <title>My Map</title>
     <link rel="shortcut icon" href="src/img/icon.png" type="image/png">
     <base href="/">
     <link rel="stylesheet" href="lib/leaflet/leaflet.css">
