--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="shortcut icon" href="src/img/icon.png" type="image/png">
     <base href="/">
     <link rel="stylesheet" href="lib/leaflet/leaflet.css">
+    <link rel="stylesheet" href="lib/mapbox-gl/mapbox-gl.css">
     <script src="lib/leaflet/leaflet.js"></script>
+    <script src="lib/mapbox-gl/mapbox-gl.js"></script>
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.min.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
