--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
       * {
           margin: 0;
           padding: 0;
+          font-family: Geneva, Arial, Helvetica, sans-serif;
       
+      }
+      table{
+          border-spacing: 0;
+      }
+      table tr td{
+          border-collapse: collapse;
+          border: none;
+          border-spacing: 0;
       }
       html, body{
           width: 100%;
