--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="src/img/icon.png" type="image/png">
     <base href="/">
     <link rel="stylesheet" href="lib/mapbox-gl/mapbox-gl.css">
-    <script src="node_modules/core-js/client/shim.min.js"></script>
+    <!--script(src='node_modules/core-js/client/shim.min.js')-->
     <script src="node_modules/zone.js/dist/zone.min.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.js"></script>
