--- a/index.html
+++ b/index.html
@@ -34,9 +34,15 @@
           width: 100%;
           height: 100%;
       }
+      .clear {
+          float: none!important;
+          clear: both!important;
+          border-bottom: 1px solid transparent;
+          margin-top: -1px;
+      }
     </style>
   </head>
-  <body>
-    <my-app>Loading...</my-app>
-  </body>
 </html>
+<body>
+  <my-app>Loading...</my-app>
+</body>
