--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Atlas A2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="src/img/icon.png" type="image/png">
-    <base href="">
+    <base href="/">
     <link rel="stylesheet" href="lib/mapbox-gl/mapbox-gl.css">
     <!--script(src='node_modules/core-js/client/shim.min.js')-->
     <script src="node_modules/zone.js/dist/zone.min.js"></script>
