add device start

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           width: 100%;
           height: 100%;
       }
-      .clear {
+      .clear, .border-hidden {
           float: none!important;
           clear: both!important;
           border-bottom: 1px solid transparent;
