--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
           width: 100%;
           height: 100%;
       }
+      .gray{
+          color: darkgray;
+      }
       .clear, .border-hidden {
           float: none!important;
           clear: both!important;
