--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <base href="/">
     <link rel="stylesheet" href="lib/mapbox-gl/mapbox-gl.css">
     <!--script(src='node_modules/core-js/client/shim.min.js')-->
-    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/zone.js/dist/zone.min.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
     <script src="node_modules/systemjs/dist/system.js"></script>
     <script src="systemjs.config.js"></script>
