--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="http://178.62.44.54/node_modules/zone.js/dist/zone.min.js"></script>
     <script src="http://178.62.44.54/node_modules/reflect-metadata/Reflect.js"></script>
     <script src="http://178.62.44.54/node_modules/systemjs/dist/system.js"></script>
-    <script src="http://178.62.44.54/systemjs.config.js"></script>
+    <script src="systemjs.config.js"></script>
     <script>System.import('app').catch(function(err){ console.error(err); });</script>
     <style>
       * {
