--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Atlas A2</title>
     <meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no" property="og:image">
     <link rel="shortcut icon" href="http://178.62.44.54/src/img/icon.png" type="image/png">
-    <base href="/Atlas-Angular2/">
+    <base href="/bike-atlas/">
     <link rel="stylesheet" href="http://178.62.44.54/lib/mapbox-gl/mapbox-gl.css">
     <!--script(src='node_modules/core-js/client/shim.min.js')-->
     <script src="http://178.62.44.54/node_modules/zone.js/dist/zone.min.js"></script>
