--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="systemjs.config.js"></script>
     <script>
       System
-              .import(['./dist/app/css/index.css','lib/mapbox-gl/mapbox-gl.css', 'app'])
+              .import(['dist/app/css/index.css','lib/mapbox-gl/mapbox-gl.css', 'app'])
               .catch(function(err){ console.error(err); });
     </script>
     <style>
