--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     
     <!--script(src='node_modules/core-js/client/shim.min.js')-->
-    <script src="http://178.62.44.54/node_modules/zone.js/dist/zone.min.js"></script>
-    <script src="http://178.62.44.54/node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="http://178.62.44.54/node_modules/systemjs/dist/system.js"></script>
+    <script src="http://178.62.44.54:8080/node_modules/zone.js/dist/zone.min.js"></script>
+    <script src="http://178.62.44.54:8080/node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="http://178.62.44.54:8080/node_modules/systemjs/dist/system.js"></script>
     <script src="systemjs.config.js"></script>
     <script>
       System
