mcc add red points

--- a/server/gtgbc/index.html
+++ b/server/gtgbc/index.html
@@ -1,15 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="/lib/leaflet/leaflet.css"/>
-    <script src="/lib/leaflet/leaflet-src.js"></script>
-</head>
-<body>
-
-</body>
-<script>
-
-</script>
-</html>
+"<p>
+<center><a href="https://cellphonetrackers.org/gsm/map.php?var=gsm&mcc=255&mnc=1&lac=1813&cid=18557" target='_blank'>Lat=50.392845
+    Lon=30.479765</a></center>
+<center> view more cell towers in this area, <a
+        href="https://cellphonetrackers.org/gsm/gsm-search.php?var=cell&lat=50.392845&lon=30.479765" target='_blank'>click
+    here</a>.
+</center>
+<div class='maps'>
+    <iframe width='425' height='350' frameborder='0' scrolling='no' marginheight='0' marginwidth='0'
+            src='https://maps.google.com/maps?q=50.392845,30.479765&t=&z=14&ie=UTF8&iwloc=&output=embed'
+            marginwidth='0'></iframe>
+</div><p>
+<center><a href="https://cellphonetrackers.org/gsm/map.php?var=gsm&mcc=255&mnc=1&lac=1813&cid=5122" target='_blank'>Lat=50.383129
+    Lon=30.488634</a></center>
+<center> view more cell towers in this area, <a
+        href="https://cellphonetrackers.org/gsm/gsm-search.php?var=cell&lat=50.383129&lon=30.488634" target='_blank'>click
+    here</a>.
+</center>
+<div class='maps'>
+    <iframe width='425' height='350' frameborder='0' scrolling='no' marginheight='0' marginwidth='0'
+            src='https://maps.google.com/maps?q=50.383129,30.488634&t=&z=14&ie=UTF8&iwloc=&output=embed'
+            marginwidth='0'></iframe>
+</div><p>
+<center><a href="https://cellphonetrackers.org/gsm/map.php?var=gsm&mcc=255&mnc=1&lac=1813&cid=18555" target='_blank'>Lat=50.383053
+    Lon=30.490496</a></center>
+<center> view more cell towers in this area, <a
+        href="https://cellphonetrackers.org/gsm/gsm-search.php?var=cell&lat=50.383053&lon=30.490496" target='_blank'>click
+    here</a>.
+</center>
+<div class='maps'>
+    <iframe width='425' height='350' frameborder='0' scrolling='no' marginheight='0' marginwidth='0'
+            src='https://maps.google.com/maps?q=50.383053,30.490496&t=&z=14&ie=UTF8&iwloc=&output=embed'
+            marginwidth='0'></iframe>
+</div><p>
+<center><a href="https://cellphonetrackers.org/gsm/map.php?var=gsm&mcc=255&mnc=1&lac=1813&cid=20391" target='_blank'>Lat=50.393314
+    Lon=30.480146</a></center>
+<center> view more cell towers in this area, <a
+        href="https://cellphonetrackers.org/gsm/gsm-search.php?var=cell&lat=50.393314&lon=30.480146" target='_blank'>click
+    here</a>.
+</center>
+<div class='maps'>
+    <iframe width='425' height='350' frameborder='0' scrolling='no' marginheight='0' marginwidth='0'
+            src='https://maps.google.com/maps?q=50.393314,30.480146&t=&z=14&ie=UTF8&iwloc=&output=embed'
+            marginwidth='0'></iframe>
+</div>
