--- a/index.html
+++ b/index.html
@@ -1,37 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <title>Bike Atlas</title>
-    <meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no" property="og:image">
-    <link rel="shortcut icon" href="src/img/main-ico.png" type="image/png">
+<head>
+    <meta charset="utf-8">
+    <title>Bike-atlas</title>
     <base href="/bike-atlas/">
 
-    
-    <!--script(src='node_modules/core-js/client/shim.min.js')-->
-    <script src="http://178.62.44.54:8080/node_modules/zone.js/dist/zone.min.js"></script>
-    <script src="http://178.62.44.54:8080/node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="http://178.62.44.54:8080/node_modules/systemjs/dist/system.js"></script>
-    <script src="systemjs.config.js"></script>
-    <script>
-      System
-              .import(['dist/app/css/index.css','lib/mapbox-gl/mapbox-gl.css', 'app'])
-              .catch(function(err){ console.error(err); });
-    </script>
-    <style>
-        my-app {
-            font-family: Geneva, Arial, Helvetica, sans-serif;
-            opacity: 0;
-            transition: .2s ease-out;
-            transition-delay: 0.2s;
-        }
-    </style>
-  </head>
-</html>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
 <body>
-  <my-app>
+<my-app>
     <div class="prelaoder">
-      <div>Loading...</div>
-      <div class="ico-z"></div>
+        <div class="loading">Loading...</div>
+        <div class="ico-z"></div>
     </div>
-  </my-app>
-</body>
+</my-app>
+<script type="text/javascript" src="http://178.62.44.54:8080/runtime.js"></script><script type="text/javascript" src="http://178.62.44.54:8080/polyfills.js"></script><script type="text/javascript" src="http://178.62.44.54:8080/styles.js"></script><script type="text/javascript" src="http://178.62.44.54:8080/vendor.js"></script><script type="text/javascript" src="http://178.62.44.54:8080/main.js"></script></body>
+</html>
