--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Bike-atlas</title>
+    <title>Bike-Atlas</title>
     <base href="/bike-atlas/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="http://178.62.44.54:8080/img/main-ico.png">
 </head>
 <body>
 <my-app>
@@ -15,5 +15,5 @@
         <div class="ico-z"></div>
     </div>
 </my-app>
-<script type="text/javascript" src="http://178.62.44.54:8080/runtime.js"></script><script type="text/javascript" src="http://178.62.44.54:8080/polyfills.js"></script><script type="text/javascript" src="http://178.62.44.54:8080/styles.js"></script><script type="text/javascript" src="http://178.62.44.54:8080/vendor.js"></script><script type="text/javascript" src="http://178.62.44.54:8080/main.js"></script></body>
+<script type="text/javascript" src="http://178.62.44.54:8080/runtime.js"></script><script type="text/javascript" src="http://178.62.44.54:8080/polyfills.js"></script><script type="text/javascript" src="http://178.62.44.54:8080/styles.js"></script><script type="text/javascript" src="http://178.62.44.54:8080/main.js"></script></body>
 </html>
