--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
         <div class="ico-z"></div>
     </div>
 </my-app>
-<script type="text/javascript" src="http://178.62.44.54:8080/runtime.js"></script><script type="text/javascript" src="http://178.62.44.54:8080/polyfills.js"></script><script type="text/javascript" src="http://178.62.44.54:8080/styles.js"></script><script type="text/javascript" src="http://178.62.44.54:8080/main.js"></script></body>
+<script type="text/javascript" src="http://178.62.44.54:8080/runtime.js"></script>
+<script type="text/javascript" src="http://178.62.44.54:8080/polyfills.js"></script>
+<script type="text/javascript" src="http://178.62.44.54:8080/styles.js"></script>
+<script type="text/javascript" src="http://178.62.44.54:8080/main.js?t=5-30-2022"></script>
+</body>
 </html>
