--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <div class="ico-z"></div>
     </div>
 </my-app>
-<script src="http://178.62.44.54:8080/runtime-es2015.js" type="module"></script>
-<script src="http://178.62.44.54:8080/runtime-es5.js" nomodule defer></script>
-<script src="http://178.62.44.54:8080/polyfills-es5.js" nomodule defer></script>
-<script src="http://178.62.44.54:8080/polyfills-es2015.js" type="module"></script>
-<script src="http://178.62.44.54:8080/styles-es2015.js" type="module"></script>
-<script src="http://178.62.44.54:8080/styles-es5.js" nomodule defer></script>
-<script src="http://178.62.44.54:8080/main-es2015.js" type="module"></script>
+<script src="http://178.62.44.54:8080/runtime-es2015.js?t=5-30-2022" type="module"></script>
+<script src="http://178.62.44.54:8080/runtime-es5.js?t=5-30-2022" nomodule defer></script>
+<script src="http://178.62.44.54:8080/polyfills-es5.js?t=5-30-2022" nomodule defer></script>
+<script src="http://178.62.44.54:8080/polyfills-es2015.js?t=5-30-2022" type="module"></script>
+<script src="http://178.62.44.54:8080/styles-es2015.js?t=5-30-2022" type="module"></script>
+<script src="http://178.62.44.54:8080/styles-es5.js?t=5-30-2022" nomodule defer></script>
+<script src="http://178.62.44.54:8080/main-es2015.js?t=5-30-2022" type="module"></script>
 <script src="http://178.62.44.54:8080/main-es5.js?t=5-30-2022" nomodule defer></script>
 </body>
 </html>
