--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <div class="ico-z"></div>
     </div>
 </my-app>
-<script src="http://178.62.44.54:8080/runtime-es2015.js" type="module"></script>
-<script src="http://178.62.44.54:8080/runtime-es5.js" nomodule defer></script>
-<script src="http://178.62.44.54:8080/polyfills-es5.js" nomodule defer></script>
-<script src="http://178.62.44.54:8080/polyfills-es2015.js" type="module"></script>
-<script src="http://178.62.44.54:8080/styles-es2015.js" type="module"></script>
-<script src="http://178.62.44.54:8080/styles-es5.js" nomodule defer></script>
-<script src="http://178.62.44.54:8080/main-es2015.js" type="module"></script>
-<script src="http://178.62.44.54:8080/main-es5.js" nomodule defer></script>
+<script src="http://178.62.44.54:8080/runtime-es2015.a101ac37cfb5f7a08762.js" type="module"></script>
+<script src="http://178.62.44.54:8080/runtime-es5.a101ac37cfb5f7a08762.js" nomodule defer></script>
+<script src="http://178.62.44.54:8080/polyfills-es5.d8634501528a55614b01.js" nomodule defer></script>
+<script src="http://178.62.44.54:8080/polyfills-es2015.acd6cb3b6cf6eae797d6.js" type="module"></script>
+<script src="http://178.62.44.54:8080/styles-es2015.88aba3bc1b5ac46f9fe1.js" type="module"></script>
+<script src="http://178.62.44.54:8080/styles-es5.88aba3bc1b5ac46f9fe1.js" nomodule defer></script>
+<script src="http://178.62.44.54:8080/main-es2015.590d657fc3bdda287238.js" type="module"></script>
+<script src="http://178.62.44.54:8080/main-es5.590d657fc3bdda287238.js" nomodule defer></script>
 </body>
 </html>
