--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <div class="prelaoder">
         <div class="loading">Loading...</div>
         <div class="ico-z"></div>
+        <div class="ico-z-prod"></div>
     </div>
 </my-app>
 </body>
