migration start to 11

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="http://178.62.44.54:8080/img/main-ico.png">
+    <link rel="stylesheet" href="http://178.62.44.54:8080/styles.6b56f920bfd9be7f92d5.css">
 </head>
 <body>
 <my-app>
