--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     <div class="prelaoder">
         <div class="loading">Loading...</div>
         <div class="ico-z"></div>
+        <div class="ico-z-prod"></div>
     </div>
 </my-app>
 <script src="http://178.62.44.54:8080/runtime-es2015.ead658513497d15caba1.js" type="module"></script>
 <script src="http://178.62.44.54:8080/runtime-es5.ead658513497d15caba1.js" nomodule defer></script>
 <script src="http://178.62.44.54:8080/polyfills-es5.f85f3b4958350df14672.js" nomodule defer></script>
 <script src="http://178.62.44.54:8080/polyfills-es2015.5a146c931ef8c9797788.js" type="module"></script>
-<script src="http://178.62.44.54:8080/main-es2015.8c80217c72c54831445f.js" type="module"></script>
-<script src="http://178.62.44.54:8080/main-es5.8c80217c72c54831445f.js" nomodule defer></script>
+<script src="http://178.62.44.54:8080/main-es2015.88d1587bda9bd0df85ff.js" type="module"></script>
+<script src="http://178.62.44.54:8080/main-es5.88d1587bda9bd0df85ff.js" nomodule defer></script>
 </body>
 </html>
