--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Bike-Atlas</title>
     <base href="/bike-atlas/">
-
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="http://178.62.44.54:8080/img/main-ico.png">
     <link rel="stylesheet" href="http://178.62.44.54:8080/styles.6b56f920bfd9be7f92d5.css">
